--- a/style/component/home.css
+++ b/style/component/home.css
@@ -1,6 +1,6 @@
 body {
     font-family: "Montserrat", sans-serif;
-    background-color: #f0f0f0;
+    background-color: #F0F0F0;
 }
 
 .home {
@@ -25,4 +25,26 @@ body {
 
 .btn-blue {
     background-color: #2362B7;
+}
+
+.site-support {
+    z-index: 1;
+    right: 0;
+    bottom: 0;
+    position: fixed;
+    margin: 30px;
+    width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 5px solid #000;
+  text-align: center;
+  line-height: 40px;
+  font-size: 20px;
+  transition: all 0.6s ease;
+}
+
+.site-support:hover{
+    border-color:#1E88E5;
+    box-shadow: 0px 0px 50px #1E88E5;
+    color: #1E88E5;
 }
