--- a/style/component/home.css
+++ b/style/component/home.css
@@ -1,6 +1,7 @@
 body {
     font-family: "Montserrat", sans-serif;
     background-color: #F0F0F0;
+    height: 2000px;
 }
 
 .home {
@@ -11,6 +12,21 @@ body {
     text-align: center;
     width: 100%;
     height: 70vh;
+}
+
+.home h1 {
+    font-size: 80px;
+    margin: 1rem;
+}
+
+.home p {
+    font-size: 17px;
+    font-weight: 400;
+    margin: 0.6rem;
+}
+
+.home .btn-group {
+    margin: 1rem;
 }
 
 .btn-primary {
@@ -27,24 +43,10 @@ body {
     background-color: #2362B7;
 }
 
-.site-support {
+.btn-support {
     z-index: 1;
     right: 0;
     bottom: 0;
     position: fixed;
     margin: 30px;
-    width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  border: 5px solid #000;
-  text-align: center;
-  line-height: 40px;
-  font-size: 20px;
-  transition: all 0.6s ease;
-}
-
-.site-support:hover{
-    border-color:#1E88E5;
-    box-shadow: 0px 0px 50px #1E88E5;
-    color: #1E88E5;
 }
