--- a/style/all.css
+++ b/style/all.css
@@ -2,5 +2,6 @@
 
 @import url("component/navbar.css");
 @import url("component/home.css");
+@import url("component/about.css");
 
 @import url('https://fonts.googleapis.com/css?family=Montserrat:700&display=swap');
