--- a/style/component/home.css
+++ b/style/component/home.css
@@ -1,7 +1,6 @@
 body {
     font-family: "Montserrat", sans-serif;
     background-color: #F0F0F0;
-    height: 2000px;
 }
 
 .home {
@@ -11,7 +10,7 @@ body {
     flex-direction: column;
     text-align: center;
     width: 100%;
-    height: 70vh;
+    height: 85vh;
 }
 
 .home h1 {
@@ -49,4 +48,10 @@ body {
     bottom: 0;
     position: fixed;
     margin: 30px;
+}
+
+@media screen and (max-width: 600px) {
+    .home h1 {
+        font-size: 40px;
+    }
 }
