--- a/appex/style/main.css
+++ b/appex/style/main.css
@@ -22,6 +22,7 @@
 .home p {
     width: 300px;
     margin-bottom: 20px;
+    color: #efefef;
 }
 
 .home img {
@@ -40,16 +41,21 @@
 
 .features img {
     width: 100px;
-    margin: 20px;
+    margin: 40px;
     height: 100px;
 }
 
 .features h2 {
-    padding: 60px;
+    padding: 60px; 
+}
+
+.features p {
+    padding-bottom: 30px;
 }
 
 .features-tech {
-    padding: 40px;
+    padding: 70px;
+    margin: 40px;
     background: #24282c;
 }
 
@@ -73,11 +79,11 @@
     height: 50px;
     background: #efefef;
     font-size: 24px;
-    text-transform: uppercase;
+    text-transform: uppercase;  
 }
 
 .about img {
-    width: 300px;
+    max-width: 100%;
     height: 400px;
     padding: 40px;
 } 
@@ -100,6 +106,27 @@ button.navbar-toggler {
     outline: none;
 }
 
+.nav-link:hover {
+    cursor: pointer;
+}
+
+.about h2, p {
+    color: #efefef;
+    padding: 15px;
+}
+
+.about-col {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+span {
+    font-size: 35px;
+    color: #343a40;
+    background-color: #ff9900;  
+}
+
 @media screen and (max-width: 1200px) {
     .about {
         background: #343a40;
@@ -107,9 +134,24 @@ button.navbar-toggler {
     .features {
         padding: 10px;
     }
+    .features-tech h1 {
+        font-size: 1rem;
+    }
+    .features-tech {
+        padding: 10px;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .about img {
+        height: 300px;
+    }
+    .features h2 {
+        padding: 0;
+    }
     .about-block {
-        width: 15rem;
-        height: 30px;
+        width: 18rem;
+    height: 30px;
     }
 }
 
