--- a/appex/style/main.css
+++ b/appex/style/main.css
@@ -1,14 +1,9 @@
+body {
+    font-family: 'Montserrat';
+}
+
 .navbar-brand img {
     width: 35px;
-}
-
-a {
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: none;
-    color: white,
 }
 
 .home {
@@ -93,7 +88,8 @@ a:hover {
 
 .about img {
     max-width: 100%;
-    height: 400px;
+    object-fit: contain;
+    max-height: 100%;
     padding: 40px;
 } 
 
@@ -128,6 +124,8 @@ button.navbar-toggler {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-weight: 600;
+    font-size: 18px;
 }
 
 span {
