--- a/kindergarten/style/style.css
+++ b/kindergarten/style/style.css
@@ -104,6 +104,24 @@ body {
     text-align: center;
 }
 
+.about .col-md-6 .pill {
+    border: 1px solid;
+    padding: 10px;
+    margin: 1rem;
+    border-radius: 4px;
+}
+
+.about .col-md-6 .pill:hover {
+    text-decoration: none;
+    background-color: #007bff;
+    border: 1px solid #007bff;
+    color: white;
+}
+
+.about .tab-content, .about h3 {
+    margin-top: 30px;
+}
+
 .about .title {
     color: skyblue;
 }
@@ -241,6 +259,8 @@ footer {
     .navbar {
         height: 100px;
     }
+
+    
 }
 
 @media screen and (max-width: 992px) {
@@ -255,5 +275,8 @@ footer {
     }
     .home h2 h3, span {
         border-radius: 0px;
+    }
+    .about .col-md-6 .pill {
+        margin: 0;
     }
 }
