--- a/kindergarten/style/learning.css
+++ b/kindergarten/style/learning.css
@@ -88,3 +88,9 @@
   margin-bottom: 1.2em;
   padding: 0.25em 1em 0.2em 1em;
 }
+
+@media screen and (max-width: 406px) {
+  .timeline h3 {
+    font-size: 20px;
+  }
+}
