--- a/kindergarten/style/learning.css
+++ b/kindergarten/style/learning.css
@@ -1,5 +1,5 @@
 body {
-  background: url(../images//learning.jpg) no-repeat;
+  background: url(../images/learning.jpg) no-repeat;
   background-size: cover;
   background-attachment: fixed;
 }
