--- a/kindergarten/style/style.css
+++ b/kindergarten/style/style.css
@@ -104,16 +104,13 @@ body {
     text-transform: none;
 }
 
-#about {
-    padding-top: 4em;
-}
-
 #about .row {
     text-align: center;
 }
 
 #about .title {
     color: skyblue;
+    flex: 25%;
 }
 
 #about span {
@@ -123,6 +120,10 @@ body {
 #about .btn {
     padding: 1rem;
     margin: 1rem;
+}
+
+#about .services {
+    padding-top: 4em;
 }
 
 .schedule {
@@ -233,7 +234,8 @@ footer p {
     width: 100%;
     height: 100%;
     overflow: visible;
-    background: #fbfbfb url('http://cdnjs.cloudflare.com/ajax/libs/file-uploader/3.7.0/processing.gif') no-repeat center center;
+    background: #fbfbfb url('../images/preloader.gif') no-repeat center center;
+    background-size: 8em;
 }
   
 .visible {
@@ -254,15 +256,10 @@ footer p {
     background-color: #f0f0f0;
 }
 
-.gallery .grid {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-gap: 1em;
-    grid-auto-flow: row dense;
-}
 
-.gallery .grid img  {
-    width: 100%;
+.gallery  img  {
+    width: 100% !important;
+    padding: 0.3rem;
 }
 
 .main {
@@ -337,6 +334,9 @@ footer p {
     }
     #about img {
         width: 30%;
+    }
+    .about img {
+        width: 100% !important;
     }
 }
 
