--- a/kindergarten/style/growth.css
+++ b/kindergarten/style/growth.css
@@ -1,3 +1,8 @@
+#gallery img {
+    height: 85vh;
+    object-fit: cover;
+}
+
 .courses {
     padding: 60px 0;
 }
@@ -7,6 +12,7 @@
     height: 300px;
     margin: 1rem 0;
     border-radius: 10px;
+    object-fit: cover;
 }
 
 .courses .btn-outline-primary {
