--- a/kindergarten/style/mind.css
+++ b/kindergarten/style/mind.css
@@ -1,3 +1,24 @@
+#mission .col-md-6 {
+    
+}
+
+#mission .title {
+    color: white;
+    background-image: url('/images/team/background_mission.png');
+    background-size: cover;
+}
+
+#mission .image {
+    background-image: url('/images/gallery/photo25.jpg');
+    background-size: cover;
+}
+
+#mission .title p {
+    font-size: 24px;
+    opacity: 0.8;
+    font-weight: 100;
+}
+
 #mind {
     height: 100%;
     padding: 2rem 0;
@@ -9,5 +30,15 @@
 
 #mind img {
     height: 250px;
-    background-size: cover;
+    object-fit: cover;
+}
+
+#team {
+    margin-bottom: 1em;
+}
+
+@media screen and (max-width: 420px) {
+    .staff h2 {
+        font-size: 1rem;
+    }
 }
