--- a/kindergarten/style/growth.css
+++ b/kindergarten/style/growth.css
@@ -1,6 +1,8 @@
 #gallery img {
-    height: 85vh;
+    height: 80vh;
     object-fit: cover;
+    margin: 1rem 0;
+    border-radius: 20px;
 }
 
 .courses {
@@ -9,7 +11,7 @@
 
 .courses img {
     width: 100%;
-    height: 300px;
+    height: 350px;
     margin: 1rem 0;
     border-radius: 10px;
     object-fit: cover;
