--- a/kindergarten/style/mind.css
+++ b/kindergarten/style/mind.css
@@ -1,15 +1,15 @@
 #mission .col-md-6 {
-    
+
 }
 
 #mission .title {
-    color: white;
-    background-image: url('/images/team/background_mission.png');
+  color: white;
+    background-image: url('../images/team/background_mission.png');
     background-size: cover;
 }
 
 #mission .image {
-    background-image: url('/images/gallery/photo25.jpg');
+    background-image: url('../images/gallery/photo25.jpg');
     background-size: cover;
 }
 
