--- a/kindergarten/style/growth.css
+++ b/kindergarten/style/growth.css
@@ -6,22 +6,24 @@
 }
 
 .courses {
-    padding: 60px 0;
-}
-
-.courses img {
+    background-image: url('../images/fantastic/IMG_20200210_144428_955.png');
+    background-repeat: no-repeat;
     width: 100%;
-    height: 350px;
-    margin: 1rem 0;
-    border-radius: 10px;
-    object-fit: cover;
+    background-size: cover;
+    color: white;
 }
 
-.courses .btn-outline-primary {
-    padding: 1rem 2rem;
-    border-radius: 360px;
+.courses .container {
+    padding: 40px;
 }
+
 
 .courses h4 {
     padding: 1rem 0;
+}
+
+@media screen and (max-width: 460px) {
+    h3 {
+        font-size: 1.3rem;
+    }
 }
