--- a/kindergarten/style/mind.css
+++ b/kindergarten/style/mind.css
@@ -1,7 +1,3 @@
-#mission .col-md-6 {
-    
-}
-
 #mission .title {
     color: white;
     background-image: url('/images/team/background_mission.png');
@@ -38,7 +34,7 @@
 }
 
 @media screen and (max-width: 420px) {
-    .staff h2 {
-        font-size: 1rem;
+    .staff {
+        font-size: 1.3rem;
     }
 }
