#maripbekoff 26.02.2020 21:27 *Fully localizated and added new page for welcome

--- a/kindergarten/style/mind.css
+++ b/kindergarten/style/mind.css
@@ -33,6 +33,21 @@
     margin-bottom: 1em;
 }
 
+.welcome {
+    height: 100%;
+    background-color: #ffba5a;
+    text-align: center;
+}
+
+.welcome .col-md-6, .col-md-12 {
+    text-align: start;
+}
+
+.welcome .col-md-6 img {
+    width: 100%;
+}
+
+
 @media screen and (max-width: 420px) {
     .staff {
         font-size: 1.3rem;
